--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   text-align: center;
 }
 .App code {
-  background: #FFF3;
+  background: #fff3;
   padding: 4px 8px;
   border-radius: 4px;
 }
@@ -34,6 +34,16 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.bubb {
+  background-color: hotpink;
+  height: 100px;
+  border-radius: 0.4rem;
+
+  p {
+    color: #282c34;
+  }
 }
 
 @keyframes App-logo-spin {
